# itk4_example

./: CMakeLists.txt
example/: CMakeLists.txt  itk_resample.cpp
